# pkg-wascan

./: .gitignore  Cargo.toml  LICENSE-APACHE.md  LICENSE.md  Makefile  README.md  package-lock.json  package.json
demo/: index.html  main.js
pkg/: .npmignore  README.md  package.json  wascan.d.ts  wascan.js  wascan_bg.wasm  wascan_bg.wasm.d.ts
src/: config.rs  detector.rs  error.rs  event.rs  lib.rs  reader.rs  scanner.rs
test/: main.js
