[package]
name = "wascan"
version = "0.1.0"
edition = "2024"
description = "BarCode scanning library for WebAssembly"
repository = "https://github.com/intelligent-medical-cloud/pkg-wascan"
license = "Private"
publish = false
exclude = ["target/", "pkg/"]


[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.105"
js-sys = "0.3.82"
image = { version = "0.25.9", default-features = true }
rxing = { version = "0.8.2", features = ["wasm_support"] }

[dependencies.web-sys]
version = "0.3.82"
features = [
    "Event",
    "Window",
    "Document",
    "console"
]
