[package]
name = "wascan"
version = "0.1.5"
edition = "2024"
description = "Production-ready barcode and QR code scanner for web browsers. Handles camera access, streaming, and file input automatically. Works across all modern browsers and platforms (iOS, Android, Safari, Chrome, etc.). Built with Rust and WebAssembly for high performance."
repository = "https://github.com/intelligent-medical-cloud/pkg-wascan"
license = "Apache-2.0"
authors = ["Intelligent Medical Cloud Inc."]
keywords = ["barcode", "upc", "ean", "qrcode", "scanner"]
categories = ["wasm", "multimedia", "web-programming"]
exclude = ["target/", "pkg/", "test/"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
js-sys = "0.3.82"
console_error_panic_hook = "0.1.7"
image = { version = "0.25.9", default-features = true }
rxing = { version = "0.8.2", features = ["wasm_support"] }
thiserror = "2.0.17"

[dependencies.web-sys]
version = "0.3.82"
features = [
    "Document",
    "Event",
    "File",
    "FileList",
    "FileReader",
    "HtmlInputElement",
    "HtmlVideoElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "Window",
    "Navigator",
    "MediaDevices",
    "MediaStream",
    "MediaStreamTrack",
    "MediaStreamConstraints",
    "console"
]
